--- a/AutoMall/ViewControllers/Mall/CommodityDetailContentCell.xib
+++ b/AutoMall/ViewControllers/Mall/CommodityDetailContentCell.xib
@@ -20,8 +20,8 @@
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="商品详情描述 商品详情描述 商品详情描述 商品详情描述 商品详情描述 商品详情描述 商品详情描述 商品详情描述 商品详情描述" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WgH-ht-bo3">
                         <rect key="frame" x="16" y="8" width="296" height="43.5"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                        <nil key="textColor"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                        <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
