--- a/AutoMall/ViewControllers/Mall/CommodityListCell.xib
+++ b/AutoMall/ViewControllers/Mall/CommodityListCell.xib
@@ -11,110 +11,110 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="commodityListCell" rowHeight="115" id="KGk-i7-Jjw" customClass="CommodityListCell">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="115"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="commodityListCell" rowHeight="97" id="KGk-i7-Jjw" customClass="CommodityListCell">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="97"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="115"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="97"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="汽车全合成机油" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GRa-QY-8GY">
-                        <rect key="frame" x="96" y="8" width="135" height="21"/>
+                        <rect key="frame" x="96" y="8" width="156" height="21"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="21" id="1JP-xY-Eu4"/>
                         </constraints>
-                        <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Xnv-N7-lXx" customClass="DJQRateView">
-                        <rect key="frame" x="96" y="34" width="75" height="20"/>
+                        <rect key="frame" x="96" y="31" width="65" height="15"/>
                         <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="75" id="7au-4l-eNh"/>
-                            <constraint firstAttribute="height" constant="20" id="ew8-K3-XeR"/>
+                            <constraint firstAttribute="width" constant="65" id="7au-4l-eNh"/>
+                            <constraint firstAttribute="height" constant="15" id="ew8-K3-XeR"/>
                         </constraints>
                     </view>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="月销273单" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="6" translatesAutoresizingMaskIntoConstraints="NO" id="Nob-g3-BC6">
-                        <rect key="frame" x="187" y="33" width="49" height="21"/>
+                        <rect key="frame" x="177" y="27.5" width="44.5" height="21"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="21" id="HRp-an-yBG"/>
                         </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="10"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="9"/>
                         <color key="textColor" red="0.98431372549999996" green="0.2666666667" blue="0.34901960780000002" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="￥250" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="6" translatesAutoresizingMaskIntoConstraints="NO" id="s7q-Ur-gMF">
-                        <rect key="frame" x="96" y="59" width="36.5" height="21"/>
+                        <rect key="frame" x="96" y="48" width="33.5" height="21"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="21" id="WYt-Yg-kCL"/>
                         </constraints>
-                        <fontDescription key="fontDescription" type="boldSystem" pointSize="12"/>
+                        <fontDescription key="fontDescription" type="boldSystem" pointSize="11"/>
                         <color key="textColor" red="0.98431372549999996" green="0.2666666667" blue="0.34901960780000002" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="￥250" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="6" translatesAutoresizingMaskIntoConstraints="NO" id="zsK-Al-e4b" customClass="StrikeThroughLabel">
-                        <rect key="frame" x="140.5" y="59" width="36.5" height="21"/>
+                        <rect key="frame" x="137.5" y="48" width="33.5" height="21"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="21" id="xjJ-Ax-whH"/>
                         </constraints>
-                        <fontDescription key="fontDescription" type="boldSystem" pointSize="12"/>
+                        <fontDescription key="fontDescription" type="boldSystem" pointSize="11"/>
                         <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="配送费5元" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="6" translatesAutoresizingMaskIntoConstraints="NO" id="esk-eX-Krg">
-                        <rect key="frame" x="96" y="85" width="47.5" height="21"/>
+                        <rect key="frame" x="96" y="71" width="43" height="21"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="21" id="dUn-Zg-syD"/>
                         </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="10"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="9"/>
                         <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="荐" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VC7-ne-Eyh">
-                        <rect key="frame" x="264" y="9" width="20" height="18"/>
+                        <rect key="frame" x="277" y="10.5" width="15" height="15"/>
                         <color key="backgroundColor" red="0.73333333329999995" green="0.63529411759999999" blue="0.035294117649999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="20" id="4o0-dq-C7T"/>
-                            <constraint firstAttribute="height" constant="18" id="XSi-9u-CL7"/>
+                            <constraint firstAttribute="width" constant="15" id="4o0-dq-C7T"/>
+                            <constraint firstAttribute="height" constant="15" id="XSi-9u-CL7"/>
                         </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="10"/>
                         <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="折" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jlg-Gy-XOM">
-                        <rect key="frame" x="292" y="9" width="20" height="18"/>
+                        <rect key="frame" x="297" y="10.5" width="15" height="15"/>
                         <color key="backgroundColor" red="0.91764705879999997" green="0.0" blue="0.094117647060000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="18" id="CeV-qE-w4a"/>
-                            <constraint firstAttribute="width" constant="20" id="m6t-hD-9DZ"/>
+                            <constraint firstAttribute="height" constant="15" id="CeV-qE-w4a"/>
+                            <constraint firstAttribute="width" constant="15" id="m6t-hD-9DZ"/>
                         </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="10"/>
                         <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="爆" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AlS-7I-jIZ">
-                        <rect key="frame" x="236" y="9" width="20" height="18"/>
+                        <rect key="frame" x="257" y="10.5" width="15" height="15"/>
                         <color key="backgroundColor" red="0.91764705879999997" green="0.0" blue="0.094117647060000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="20" id="7Pa-VZ-y7t"/>
-                            <constraint firstAttribute="height" constant="18" id="x1a-ed-dyG"/>
+                            <constraint firstAttribute="width" constant="15" id="7Pa-VZ-y7t"/>
+                            <constraint firstAttribute="height" constant="15" id="x1a-ed-dyG"/>
                         </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="10"/>
                         <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="500积分" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="6" translatesAutoresizingMaskIntoConstraints="NO" id="FG4-rV-5Pr">
-                        <rect key="frame" x="264" y="33" width="47.5" height="21"/>
+                        <rect key="frame" x="275.5" y="27.5" width="36" height="21"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="21" id="oR0-Mm-vyz"/>
                         </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="9"/>
                         <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="personalCenter" translatesAutoresizingMaskIntoConstraints="NO" id="rdR-7Y-MpC">
-                        <rect key="frame" x="8" y="17.5" width="80" height="80"/>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="timg-2" translatesAutoresizingMaskIntoConstraints="NO" id="rdR-7Y-MpC">
+                        <rect key="frame" x="8" y="7.5" width="80" height="80"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="80" id="Nhg-CQ-jqs"/>
                             <constraint firstAttribute="height" constant="80" id="tpb-ZI-snh"/>
@@ -123,7 +123,7 @@
                 </subviews>
                 <constraints>
                     <constraint firstItem="AlS-7I-jIZ" firstAttribute="centerY" secondItem="GRa-QY-8GY" secondAttribute="centerY" id="0xi-Qf-w3i"/>
-                    <constraint firstItem="VC7-ne-Eyh" firstAttribute="leading" secondItem="AlS-7I-jIZ" secondAttribute="trailing" constant="8" id="3ce-dV-Udt"/>
+                    <constraint firstItem="VC7-ne-Eyh" firstAttribute="leading" secondItem="AlS-7I-jIZ" secondAttribute="trailing" constant="5" id="3ce-dV-Udt"/>
                     <constraint firstItem="Nob-g3-BC6" firstAttribute="leading" secondItem="Xnv-N7-lXx" secondAttribute="trailing" constant="16" id="3wL-jP-wry"/>
                     <constraint firstItem="zsK-Al-e4b" firstAttribute="centerY" secondItem="s7q-Ur-gMF" secondAttribute="centerY" id="6B0-1u-GyO"/>
                     <constraint firstItem="s7q-Ur-gMF" firstAttribute="leading" secondItem="rdR-7Y-MpC" secondAttribute="trailing" constant="8" id="6fv-6z-yFi"/>
@@ -131,16 +131,16 @@
                     <constraint firstItem="zsK-Al-e4b" firstAttribute="leading" secondItem="s7q-Ur-gMF" secondAttribute="trailing" constant="8" id="A3V-Te-rBr"/>
                     <constraint firstItem="rdR-7Y-MpC" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="Dd2-bx-apt"/>
                     <constraint firstItem="rdR-7Y-MpC" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="HKs-dD-XHc"/>
-                    <constraint firstItem="Xnv-N7-lXx" firstAttribute="top" secondItem="GRa-QY-8GY" secondAttribute="bottom" constant="5" id="IKa-NF-6aJ"/>
+                    <constraint firstItem="Xnv-N7-lXx" firstAttribute="top" secondItem="GRa-QY-8GY" secondAttribute="bottom" constant="2" id="IKa-NF-6aJ"/>
                     <constraint firstItem="AlS-7I-jIZ" firstAttribute="leading" secondItem="GRa-QY-8GY" secondAttribute="trailing" constant="5" id="TjZ-So-unU"/>
                     <constraint firstItem="GRa-QY-8GY" firstAttribute="leading" secondItem="rdR-7Y-MpC" secondAttribute="trailing" constant="8" id="UPC-9G-78x"/>
                     <constraint firstItem="Nob-g3-BC6" firstAttribute="centerY" secondItem="Xnv-N7-lXx" secondAttribute="centerY" id="VTU-eE-LrF"/>
-                    <constraint firstItem="esk-eX-Krg" firstAttribute="top" secondItem="zsK-Al-e4b" secondAttribute="bottom" constant="5" id="bau-re-mPh"/>
-                    <constraint firstItem="jlg-Gy-XOM" firstAttribute="leading" secondItem="VC7-ne-Eyh" secondAttribute="trailing" constant="8" id="cRx-v1-B4p"/>
+                    <constraint firstItem="esk-eX-Krg" firstAttribute="top" secondItem="zsK-Al-e4b" secondAttribute="bottom" constant="2" id="bau-re-mPh"/>
+                    <constraint firstItem="jlg-Gy-XOM" firstAttribute="leading" secondItem="VC7-ne-Eyh" secondAttribute="trailing" constant="5" id="cRx-v1-B4p"/>
                     <constraint firstItem="VC7-ne-Eyh" firstAttribute="centerY" secondItem="GRa-QY-8GY" secondAttribute="centerY" id="gK8-nM-Ovy"/>
                     <constraint firstItem="FG4-rV-5Pr" firstAttribute="centerY" secondItem="Xnv-N7-lXx" secondAttribute="centerY" id="icQ-4c-MQs"/>
                     <constraint firstItem="jlg-Gy-XOM" firstAttribute="centerY" secondItem="GRa-QY-8GY" secondAttribute="centerY" id="qr2-3f-s2V"/>
-                    <constraint firstItem="s7q-Ur-gMF" firstAttribute="top" secondItem="Xnv-N7-lXx" secondAttribute="bottom" constant="5" id="r4y-kk-HjE"/>
+                    <constraint firstItem="s7q-Ur-gMF" firstAttribute="top" secondItem="Xnv-N7-lXx" secondAttribute="bottom" constant="2" id="r4y-kk-HjE"/>
                     <constraint firstItem="Xnv-N7-lXx" firstAttribute="leading" secondItem="rdR-7Y-MpC" secondAttribute="trailing" constant="8" id="sun-os-3lo"/>
                     <constraint firstItem="esk-eX-Krg" firstAttribute="leading" secondItem="rdR-7Y-MpC" secondAttribute="trailing" constant="8" id="wNw-fY-HLe"/>
                     <constraint firstAttribute="trailing" secondItem="FG4-rV-5Pr" secondAttribute="trailing" constant="8" id="z0R-z3-PIO"/>
@@ -160,10 +160,10 @@
                 <outlet property="yunfeiL" destination="esk-eX-Krg" id="r0E-Oo-AxH"/>
                 <outlet property="zhekouL" destination="jlg-Gy-XOM" id="cqy-u4-APm"/>
             </connections>
-            <point key="canvasLocation" x="-436" y="69.5"/>
+            <point key="canvasLocation" x="-436" y="60.5"/>
         </tableViewCell>
     </objects>
     <resources>
-        <image name="personalCenter" width="33" height="33"/>
+        <image name="timg-2" width="691" height="667"/>
     </resources>
 </document>
