--- a/AutoMall/ViewControllers/Mall/SettlementFootView.xib
+++ b/AutoMall/ViewControllers/Mall/SettlementFootView.xib
@@ -6,73 +6,68 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
-        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="SettlementFootView">
-            <rect key="frame" x="0.0" y="0.0" width="600" height="300"/>
+            <rect key="frame" x="0.0" y="0.0" width="600" height="78"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="注：衣服因材质，长度，厚度不同价格有所不同，以收衣时核验为准" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="krG-J8-dyl">
-                    <rect key="frame" x="262" y="14" width="330" height="13.5"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="11"/>
-                    <color key="textColor" red="0.66666666666666663" green="0.66666666666666663" blue="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                    <nil key="highlightedColor"/>
-                </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="￥36" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NzF-jg-v77">
-                    <rect key="frame" x="554" y="57" width="38" height="20.5"/>
+                    <rect key="frame" x="554" y="15" width="38" height="20.5"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <color key="textColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="共计：" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Psw-0Z-ucy">
-                    <rect key="frame" x="511" y="59" width="42" height="17"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="共计：" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Psw-0Z-ucy">
+                    <rect key="frame" x="510" y="17" width="43" height="17"/>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wyj-un-QIa">
-                    <rect key="frame" x="8" y="242" width="584" height="50"/>
-                    <color key="backgroundColor" red="0.90588235289999997" green="0.38431372549999998" blue="0.1137254902" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                    <state key="normal" title="确认订单">
-                        <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                    </state>
-                    <userDefinedRuntimeAttributes>
-                        <userDefinedRuntimeAttribute type="string" keyPath="layer.cornerRadius" value="6"/>
-                    </userDefinedRuntimeAttributes>
-                </button>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="共7件" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vYw-kX-DMc">
-                    <rect key="frame" x="467" y="59.5" width="36" height="17"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="共7件" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vYw-kX-DMc">
+                    <rect key="frame" x="466" y="17" width="36" height="17"/>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="配送费：￥5" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vck-2i-DDp">
+                    <rect key="frame" x="523" y="43" width="69" height="14.5"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                    <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fHk-cy-OD5">
+                    <rect key="frame" x="0.0" y="77" width="600" height="1"/>
+                    <color key="backgroundColor" red="0.7843137255" green="0.78039215689999997" blue="0.80000000000000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="0.5" id="XjD-2a-KpP"/>
+                    </constraints>
+                </view>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstAttribute="trailing" secondItem="wyj-un-QIa" secondAttribute="trailing" constant="8" id="Dgk-qh-Re3"/>
+                <constraint firstAttribute="trailing" secondItem="fHk-cy-OD5" secondAttribute="trailing" id="2rj-bG-gAW"/>
+                <constraint firstItem="vck-2i-DDp" firstAttribute="top" secondItem="NzF-jg-v77" secondAttribute="bottom" constant="8" id="H08-Aw-47K"/>
                 <constraint firstAttribute="trailing" secondItem="NzF-jg-v77" secondAttribute="trailing" constant="8" id="I78-aj-shr"/>
-                <constraint firstAttribute="trailing" secondItem="krG-J8-dyl" secondAttribute="trailing" constant="8" id="Sy5-gV-hbi"/>
+                <constraint firstAttribute="trailing" secondItem="vck-2i-DDp" secondAttribute="trailing" constant="8" id="LxX-Wo-fCv"/>
+                <constraint firstItem="NzF-jg-v77" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="15" id="VTc-vW-1uN"/>
                 <constraint firstItem="NzF-jg-v77" firstAttribute="leading" secondItem="Psw-0Z-ucy" secondAttribute="trailing" constant="1" id="a5a-fI-93l"/>
-                <constraint firstAttribute="bottom" secondItem="wyj-un-QIa" secondAttribute="bottom" constant="8" id="fSf-4n-UyD"/>
                 <constraint firstItem="Psw-0Z-ucy" firstAttribute="centerY" secondItem="NzF-jg-v77" secondAttribute="centerY" id="iO0-KI-nUS"/>
-                <constraint firstItem="wyj-un-QIa" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="8" id="laQ-Of-Kbv"/>
-                <constraint firstItem="wyj-un-QIa" firstAttribute="height" secondItem="iN0-l3-epB" secondAttribute="height" multiplier="50/300" id="q8R-FN-WWp"/>
+                <constraint firstAttribute="bottom" secondItem="fHk-cy-OD5" secondAttribute="bottom" id="jfd-LJ-hyp"/>
                 <constraint firstItem="Psw-0Z-ucy" firstAttribute="leading" secondItem="vYw-kX-DMc" secondAttribute="trailing" constant="8" id="qIs-h6-NVW"/>
-                <constraint firstItem="krG-J8-dyl" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="14" id="rCn-6p-btq"/>
-                <constraint firstItem="NzF-jg-v77" firstAttribute="top" secondItem="krG-J8-dyl" secondAttribute="bottom" constant="30" id="sVw-s4-g5K"/>
                 <constraint firstItem="vYw-kX-DMc" firstAttribute="centerY" secondItem="Psw-0Z-ucy" secondAttribute="centerY" id="syC-0g-5d2"/>
+                <constraint firstItem="fHk-cy-OD5" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="wA6-pR-3iH"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
-                <outlet property="confirmOrder" destination="wyj-un-QIa" id="TNv-sm-FyT"/>
                 <outlet property="money" destination="NzF-jg-v77" id="ax8-Ql-bTW"/>
                 <outlet property="numbers" destination="vYw-kX-DMc" id="aQ3-bh-nfS"/>
+                <outlet property="yunfeiL" destination="vck-2i-DDp" id="CMr-Ki-wkA"/>
             </connections>
-            <point key="canvasLocation" x="143" y="223"/>
+            <point key="canvasLocation" x="-470" y="247"/>
         </view>
     </objects>
 </document>
